; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/flower/extr_cmsg.c_nfp_flower_cmsg_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/flower/extr_cmsg.c_nfp_flower_cmsg_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.nfp_app = type { i32 }
%struct.nfp_flower_cmsg_hdr = type { i32, i32, i64 }

@NFP_FLOWER_CMSG_HLEN = common dso_local global i64 0, align 8
@NFP_FLOWER_CMSG_VER1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sk_buff* @nfp_flower_cmsg_alloc(%struct.nfp_app* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.nfp_app*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.nfp_flower_cmsg_hdr*, align 8
  %11 = alloca %struct.sk_buff*, align 8
  store %struct.nfp_app* %0, %struct.nfp_app** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i64, i64* @NFP_FLOWER_CMSG_HLEN, align 8
  %13 = load i32, i32* %7, align 4
  %14 = zext i32 %13 to i64
  %15 = add nsw i64 %14, %12
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %7, align 4
  %17 = load %struct.nfp_app*, %struct.nfp_app** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call %struct.sk_buff* @nfp_app_ctrl_msg_alloc(%struct.nfp_app* %17, i32 %18, i32 %19)
  store %struct.sk_buff* %20, %struct.sk_buff** %11, align 8
  %21 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %22 = icmp ne %struct.sk_buff* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %4
  store %struct.sk_buff* null, %struct.sk_buff** %5, align 8
  br label %39

24:                                               ; preds = %4
  %25 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %26 = call %struct.nfp_flower_cmsg_hdr* @nfp_flower_cmsg_get_hdr(%struct.sk_buff* %25)
  store %struct.nfp_flower_cmsg_hdr* %26, %struct.nfp_flower_cmsg_hdr** %10, align 8
  %27 = load %struct.nfp_flower_cmsg_hdr*, %struct.nfp_flower_cmsg_hdr** %10, align 8
  %28 = getelementptr inbounds %struct.nfp_flower_cmsg_hdr, %struct.nfp_flower_cmsg_hdr* %27, i32 0, i32 2
  store i64 0, i64* %28, align 8
  %29 = load i32, i32* @NFP_FLOWER_CMSG_VER1, align 4
  %30 = load %struct.nfp_flower_cmsg_hdr*, %struct.nfp_flower_cmsg_hdr** %10, align 8
  %31 = getelementptr inbounds %struct.nfp_flower_cmsg_hdr, %struct.nfp_flower_cmsg_hdr* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load %struct.nfp_flower_cmsg_hdr*, %struct.nfp_flower_cmsg_hdr** %10, align 8
  %34 = getelementptr inbounds %struct.nfp_flower_cmsg_hdr, %struct.nfp_flower_cmsg_hdr* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 8
  %35 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @skb_put(%struct.sk_buff* %35, i32 %36)
  %38 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  store %struct.sk_buff* %38, %struct.sk_buff** %5, align 8
  br label %39

39:                                               ; preds = %24, %23
  %40 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  ret %struct.sk_buff* %40
}

declare dso_local %struct.sk_buff* @nfp_app_ctrl_msg_alloc(%struct.nfp_app*, i32, i32) #1

declare dso_local %struct.nfp_flower_cmsg_hdr* @nfp_flower_cmsg_get_hdr(%struct.sk_buff*) #1

declare dso_local i32 @skb_put(%struct.sk_buff*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
